# CyberShield-MMCARS

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: agents.yaml  app.yaml  dashboard.yaml  ml.yaml  redis.yaml  security.yaml
docs/: GETTING_STARTED.md
scripts/: config.py  simulate_attack.py
scripts/attacks/: brute_force_attack.py  ddos_attack.py  port_scan_attack.py  sql_injection_attack.py  syn_flood_attack.py  xss_attack.py
src/: __init__.py
src/agents/: __init__.py
src/agents/bots/: __init__.py  analyzer_bot.py  mitigation_orchestrator_bot.py  mitigator_bot.py  monitor_bot.py  reporter_bot.py  responder_bot.py
src/agents/coordinator/: __init__.py  orchestrator.py
src/agents/llm/: __init__.py  claude_client.py
src/agents/prompts/: __init__.py  analyzer_prompt.py  mitigation_orchestrator_prompt.py  mitigator_prompt.py  monitor_prompt.py  reporter_prompt.py  responder_prompt.py
src/agents/runtime/: __init__.py  agent_runtime.py  agent_spawner.py  message_bus.py
src/api/: __init__.py
src/api/rest/: __init__.py  app.py  security.py
src/api/rest/middleware/: __init__.py  auth.py  rate_limiter.py  traffic_interceptor.py
src/api/rest/v1/: __init__.py  router.py
src/api/rest/v1/endpoints/: __init__.py  agents.py  health.py  metrics.py  threats.py
src/config/: __init__.py  settings.py
src/dashboard/: __init__.py
src/dashboard/backend/: __init__.py  dashboard_service.py
src/dashboard/frontend/static/css/: styles.css
src/dashboard/frontend/static/js/: dashboard.js
src/dashboard/frontend/templates/: about.html  index.html
src/domain/: __init__.py
src/domain/entities/: __init__.py  attack_vector.py  response_action.py  threat.py  traffic_event.py
src/domain/events/: __init__.py  threat_detected.py
src/domain/value_objects/: __init__.py  attack_signature.py  ip_address.py  threat_level.py
src/infrastructure/: __init__.py
src/infrastructure/health/: __init__.py  docker_health.py  health_checker.py  heartbeat.py
src/infrastructure/persistence/: __init__.py  redis_client.py
src/ml/: __init__.py
src/ml/features/: __init__.py  extractor.py
src/ml/inference/: __init__.py  predictor.py
src/ml/models/: __init__.py  anomaly_detector.py  base_model.py
src/proxy/: __init__.py  config.py  forwarder.py  gateway.py  inspector.py  server.py
