[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybershield"
version = "0.1.0"
description = "Multi-Model Cyber Attack Response System - A hybrid defensive security system using ML and AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "CyberShield Team"}
]
keywords = [
    "cybersecurity",
    "threat-detection",
    "machine-learning",
    "ai-agents",
    "ddos-protection",
    "intrusion-detection"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scapy>=2.5.0",
    "aiohttp>=3.9.0",
    "jinja2>=3.1.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

ml = [
    "tensorflow>=2.15.0",
    "torch>=2.1.0",
]

[project.scripts]
cybershield = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["scapy.*", "sklearn.*", "tensorflow.*", "torch.*"]
ignore_missing_imports = true
